--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -10,3 +10,10 @@
 .u-margin-bottom-big {
   margin-bottom: 8rem;
 }
+.u-margin-top {
+  margin-bottom: 8rem;
+}
+
+.u-margin-top-huge {
+  margin-bottom: 10rem;
+}
