--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,9 +12,13 @@
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/form";
+@import "components/popup";
 @import "components/story";
 
+@import "layouts/footer";
 @import "layouts/header";
 @import "layouts/grid";
+@import "layouts/navigation";
 
 @import "pages/home";
