--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,18 @@
 html {
   // This defines what 1 rem is
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(big-destop) {
+    font-size: 75%;
+  }
 }
 
 body {
@@ -20,4 +32,8 @@ body {
   padding: 3rem;
 
   box-sizing: border-box;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
